--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,16 @@ services:
         - VITE_AUTH0_DOMAIN=${AUTH0_DOMAIN}
         - VITE_AUTH0_CLIENT_ID=${AUTH0_CLIENT_ID}
         - VITE_AUTH0_AUDIENCE=admin.tacokumo.pepalab.com
-        - VITE_API_BASE_URL=https://localhost:8444/
+        - VITE_API_BASE_URL=http://localhost:3000/ # ホストから見たapi
+    depends_on:
+      - mock-api
+  mock-api:
+    build:
+      context: ./mock
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=production
   nginx:
     image: nginx:1.29.1-alpine
     ports:
