--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,12 +3,8 @@ name: Admin UI CI
 on:
   push:
     branches: [ main]
-    paths:
-      - 'ui/admin/**'
   pull_request:
     branches: [ main]
-    paths:
-      - 'ui/admin/**'
 
 jobs:
   lint:
@@ -26,7 +22,7 @@ jobs:
       with:
         node-version: '24'
         cache: 'npm'
-        cache-dependency-path: ui/admin/package-lock.json
+        cache-dependency-path: package-lock.json
 
     - name: Install dependencies
       run: npm ci
